# sscmd

./: pyproject.toml
sscmd/: __init__.py  __main__.py  assignments.py  baseapi.py  client.py  conf.py  export.py  questionnaires.py
sscmd/apis/: .client.py.swp  baseapi.py  client.py  exceptions.py  export.py
sscmd/cli/: __init__.py  __main__.py  assign.py  core.py  descarga.py  directories.py  options.py  quest.py  utils.py
tests/: test_sscmd.py
