[tool.poetry]
name = "sscmd"
version = "0.1.0"
description = ""
authors = ["Benjamin <bedw@bedw.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.6.1"}
pandas = "^1.4.3"
rich-tools = "^0.5.0"
requests = "^2.28.1"
configparser = "^5.3.0"
pytz = "^2022.2.1"

[tool.poetry.scripts]
sscmd = "sscmd.cli:app"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
